--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "devDependencies": {
     "requirejs": "~2.1.19",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "lodash": "~3.10.0"
   }
 }
